# axiomkit

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MEMORY.md  README.md  RELEASE.md  pyproject.toml  pyrightconfig.json
.github/docker/manylinux-rust/: Dockerfile
.github/workflows/: manylinux-image.yml  publish.yml  py-ci.yml  r-ci.yml  rs-ci.yml
benchmarks/fs_copy_tree/: README.md
benchmarks/fs_copy_tree/results/: INDEX.md  fs_copy_tree_20260212T100236Z.json  fs_copy_tree_20260212T100236Z.md
benchmarks/xlsx_writer/: README.md
benchmarks/xlsx_writer/results/: xlsx_writer_20260212T070409Z.md  xlsx_writer_20260212T070704Z.json  xlsx_writer_20260212T070704Z.md  xlsx_writer_20260212T074644Z.json  xlsx_writer_20260212T074644Z.md  (+9 more)
crates/axiomkit_io_fs/: Cargo.toml
crates/axiomkit_io_fs_py/: Cargo.toml
crates/axiomkit_io_xlsx/: Cargo.toml
crates/axiomkit_io_xlsx/src/: constant.rs  lib.rs  spec.rs  util.rs  writer.rs
crates/axiomkit_io_xlsx_py/: Cargo.toml
crates/axiomkit_py/: Cargo.toml
crates/axiomkit_py/src/: lib.rs
doc/schema/: README.md
docs/governance/: 20260408-naming-product-architecture-audit.md
docs/migration/: xlsx_streaming_single_pass_plan.md  xlsx_writer_v2.md
docs/schema/: README.md
py/: .pdm-python  MANIFEST.in  README.md  RELEASE.md  pdm.toml  pdm_build.py  pyproject.toml  pyrightconfig.json  setup.py
py/benchmarks/fs_copy_tree/: README.md
py/benchmarks/fs_copy_tree/results/: fs_copy_tree_20260212T100236Z.json  fs_copy_tree_20260212T100236Z.md
py/benchmarks/xlsx_writer/: README.md
py/benchmarks/xlsx_writer/results/: INDEX.md  xlsx_writer_20260212T070409Z.json  xlsx_writer_20260212T074839Z.md  xlsx_writer_20260212T084801Z.json  xlsx_writer_20260212T085030Z.md  xlsx_writer_20260212T092801Z.json  xlsx_writer_20260212T092801Z.md  xlsx_writer_20260212T092844Z.md  xlsx_writer_20260212T100808Z.md  xlsx_writer_20260212T100817Z.json  xlsx_writer_compare_20260212T0850Z.md
py/scripts/: benchmark_fs_copy_tree.py  benchmark_xlsx_writer.py  release_pypi.sh  run_package_qa.py  validate_wheel.py
py/src/axiomkit/: README.md  XlsxFormatter.py  __init__.py  _optional_deps.py
py/src/axiomkit/cli/: __init__.py  actions.py  commands.py  commands_defs.py  params.py  params_defs.py  registry.py
py/src/axiomkit/cli/console/: __init__.py
py/src/axiomkit/cli/core/: __init__.py  console.py
py/src/axiomkit/cli/parser/: __init__.py  __init__.pyi  action.py  base.py  builder.py  builder.pyi  registry.py  spec.py
py/src/axiomkit/cli/parser/core/: __init__.py  param_builder.py  parser_builder.py
py/src/axiomkit/cli/parser/service/: param_builder.py
py/src/axiomkit/cli/parser/spec/: __init__.py  base.py  command.py  enum.py  param.py  parser.py  registry.py  spec.py
py/src/axiomkit/cli/service/: __init__.py
py/src/axiomkit/cli/spec/: __init__.py  action.py  command.py  group.py  param.py  parser.py
py/src/axiomkit/exec/: __init__.py  subprocess.py
py/src/axiomkit/io/: __init__.py  parquet_dataset.py  xlsx_formatter.py
py/src/axiomkit/io/fasta/: __init__.py  reader.py
py/src/axiomkit/io/fs/: __init__.py  _axiomkit_io_fs_rs.pyi  _rs_bridge.py  copy.py  report.py  spec.py  util.py
py/src/axiomkit/io/parquet/: __init__.py  writer.py
py/src/axiomkit/io/parquet/core/: __init__.py
py/src/axiomkit/io/xlsx/: __init__.py  _axiomkit_io_xlsx_rs.pyi  _rs_bridge.py  addon.py  addons.py  chunking.py  conf.py  constant.py  constants.py  dataframe.py  defaults.py  formats.py  header_merge.py  main.py  models.py  spec.py  split.py  types.py  util.py  value_conversion.py  writer.py
py/src/axiomkit/io/xlsx/conf/: __init__.py  default.py
py/src/axiomkit/io/xlsx/core/: __init__.py  xlsx_formatter.py
py/src/axiomkit/io/xlsx/hook/: __init__.py  addon.py
py/src/axiomkit/io/xlsx/service/: __init__.py  header_merge.py  row_chunk.py  sheet_split.py
py/src/axiomkit/io/xlsx/spec/: __init__.py  cell.py  sheet.py  xlsx.py
py/src/axiomkit/io/xlsx/util/: __init__.py  dataframe.py  value_convert.py
py/src/axiomkit/runner/: __init__.py  runner.py
py/src/axiomkit/stats/: __init__.py  ora.py
py/src/axiomkit/workspace/: __init__.py  plan.py  prepare_workspace.py
py/test/: data-quant.xlsx  test_copy_tree_smoke.py  test_header_vertical_runs.py  test_xlsxformatter_smoke.py
py/tests/: conftest.py  test_cli_parser_action.py  test_cli_parser_builder.py  test_copy_tree_security.py  test_copy_tree_smoke.py  test_header_vertical_runs.py  test_optional_deps.py  test_parquet_writer.py  test_runner.py  test_workspace_plan.py  test_xlsx_rs_addons_and_types.py  test_xlsx_rs_bridge_smoke.py  test_xlsx_rs_semantics.py  test_xlsxformatter_smoke.py
python/axiomkit/: __init__.py
r/: .lintr  DESCRIPTION  LICENSE  NAMESPACE
r/R/: namespace-ak.r  plot-bar-faceted.r  plot-faceted.r  stats-quant_matrix.r  zzz.R
r/man/: QuantMatrix.Rd  ak.Rd  center_median.Rd  create_quant_matrix.Rd  impute_knn.Rd  normalize_axis_median_center.Rd  plot_bar_faceted.Rd  plot_faceted.Rd
r/tests/: testthat.R
renv/: settings.json
rs/: Cargo.toml
rs/crates/axiomkit_io_xlsx_py/: Cargo.toml
rs/crates/axiomkit_io_xlsx_py/src/: lib.rs
scripts/: benchmark_fs_copy_tree.py  benchmark_xlsx_writer.py  profile_xlsx_pipeline.py  rebuild_py_extension.sh  release_pypi.sh  run_package_qa.py  sync_release_version.py  validate_wheel.py
tests/: conftest.py  test_cli_parser_action.py  test_cli_parser_builder.py  test_copy_tree_security.py  test_copy_tree_smoke.py  test_fasta_reader.py  test_public_exports.py  test_runner.py  test_stats_anova.py  test_stats_ora.py  test_stats_parametric_golden.py  test_stats_parametric_performance.py  test_stats_parametric_performance_baseline.json  test_stats_parametric_plan.py  test_stats_t_test.py  test_xlsx_rs_addons_and_types.py  test_xlsx_rs_bridge_smoke.py  test_xlsx_rs_semantics.py  test_xlsxformatter_smoke.py
(+96 files in other folders)
