[project]
name = "axiomkit"
dynamic = ["version"]
description = "Bioinformatics IO and workflow utilities with Rust-accelerated backends."
authors = [
    {name = "Fuqing Zhang", email = "fu.qing.zhang.work@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
    "biopython>=1.86",
    "pyteomics>=4.7.5",
    "polars>=1.38.1",
    "xlsxwriter>=3.2.9",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "pydantic>=2.13.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "biopython>=1.86",
    "build>=1.3.0",
    "maturin>=1.11.5,<2.0",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "pydantic>=2.13.3",
    "pyteomics>=4.7.5",
    "pytest>=9.0.2",
    "pyright>=1.1.408",
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
    "ruff>=0.15.0",
    "scipy>=1.17.0",
    "uv>=0.8.0",
    "xlsxwriter>=3.2.9",
    "statsmodels>=0.14.6",
]

[tool.maturin]
manifest-path = "crates/axiomkit_py/Cargo.toml"
python-source = "python"
module-name = "axiomkit._axiomkit_rs"
bindings = "pyo3"
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
]

[tool.pdm]
distribution = true
