[project]
name = "axiomkit"
version = "0.0.001"
description = "Default template for PDM package"
authors = [
    {name = "Fuqing Zhang", email = "fu.qing.zhang.work@gmail.com"},
]
dependencies = ["polars>=1.37.0", "xlsxwriter>=3.2.9", "loguru>=0.7.3", "numpy>=2.4.1", "scipy>=1.17.0", "pytest>=9.0.2"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
test = ["pytest>=8.0"]
