[project]
name = "axiomkit"
dynamic = ["version"]
description = "Bioinformatics IO and workflow utilities with Rust-accelerated backends."
authors = [
    {name = "Fuqing Zhang", email = "fu.qing.zhang.work@gmail.com"},
]
dependencies = ["loguru>=0.7.3"]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"

[project.optional-dependencies]
cli = [
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
]
parquet = [
    "polars>=1.38.1",
]
xlsx = [
    "polars>=1.38.1",
    "xlsxwriter>=3.2.9",
]
fasta = [
    "biopython>=1.86",
    "pyteomics>=4.7.5",
    "polars>=1.38.1",
]
stats = [
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "polars>=1.38.1",
]
all = [
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
    "biopython>=1.86",
    "pyteomics>=4.7.5",
    "polars>=1.38.1",
    "xlsxwriter>=3.2.9",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[build-system]
requires = [
    "setuptools>=77.0.0",
    "setuptools-scm>=8.0.0",
    "setuptools-rust>=1.12.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]


[dependency-groups]
dev = [
    "biopython>=1.86",
    "build>=1.3.0",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "pyteomics>=4.7.5",
    "pytest>=9.0.2",
    "pyright>=1.1.408",
    "rich>=14.3.2",
    "rich-argparse>=1.7.2",
    "ruff>=0.15.0",
    "scipy>=1.17.0",
    "xlsxwriter>=3.2.9",
]

[tool.setuptools_scm]
root = ".."
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.pdm]
distribution = true
