[package]
name = "axiomkit_py"
version = "0.0.37"
edition = "2024"

[lib]
name = "_axiomkit_rs"
crate-type = ["cdylib"]

[dependencies]
axiomkit_io_fs = { path = "../axiomkit_io_fs" }
axiomkit_io_xlsx = { path = "../axiomkit_io_xlsx" }
arrow = { package = "polars-arrow", version = "0.51.0", default-features = false }
polars = { version = "0.51.0", default-features = false }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py310"] }
