[package]
name = "axiomkit_py"
version = "0.0.37"
edition = "2024"

[lib]
name = "_axiomkit_rs"
crate-type = ["cdylib"]

[dependencies]
axiomkit_io_fs_py = { path = "../axiomkit_io_fs_py" }
axiomkit_io_xlsx_py = { path = "../axiomkit_io_xlsx_py" }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py310"] }
